Added logo to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
       sizes="76x76"
       href="{% static 'img/apple-icon.png' %}"
     />
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
+    <link class="avatar avatar-sm" rel="icon" type="image/png" href="{% static 'img/logos/SOCIALHUB.png' %}" />
     <title>SocialHuB</title>
     <!--     Fonts and icons     -->
     <link
