--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -16,7 +16,7 @@
       </a>
     </div>
     <div class="d-flex justify-content-evenly">
-      <h4 class="fs-4 text-uppercase">{{user_profile.user.username}}</h4>
+      <h6 class="fs-4">{{user_profile.user.username}} <img src="{% static 'img/verify.png' %}" class="img-fluid rounded-circle" style="width: 15px; height: 15px;"> </h6>
     </div>
 
     <div class="d-flex justify-content-evenly mt-1 text-center">
