Add active indicator to profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,19 @@ label {
         justify-content: space-between;
         align-items: center;
     }
+
+  .active-indicator {
+    width: 10px;
+    height: 10px;
+    background-color: rgba(58, 236, 27, 0.958);
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 25px; /* Adjust the margin as needed */
+    margin-right: 14px; /* Adjust the margin as needed */
+  }
+
 </style>
   </head>
 
