--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,8 @@
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <link id="pagestyle" href="{% static 'css/argon-dashboard.css' %}" rel="stylesheet" />
-    
+    <!-- jquery cdn -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <style>
       .bell-icon {
         position: relative;
@@ -411,6 +412,11 @@ function goBack() {
     history.go(-1);  // This navigates back one step in the history
 }
 </script>
+<script>
+  setTimeout( () => {
+    $(".alert").alert("close");
+  }, 3000)
+</script> 
 <!-- end -->
     <!-- Github buttons -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
