Added link that points to active_users.html

--- a/core/templates/core/followers_following_list.html
+++ b/core/templates/core/followers_following_list.html
@@ -257,6 +257,21 @@
                   </a>
                 </li>
                 <li class="mb-2">
+                  <a class="dropdown-item border-radius-md" href="{% url 'activeusers' %}">
+                    <div class="d-flex py-1">
+                      <div
+                        class="icon icon-shape icon-sm border-radius-md text-center text-success me-2 d-flex align-items-center justify-content-center">
+                        <ion-icon name="time"></ion-icon>
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        <h6 class="text-sm font-weight-normal mb-1">
+                          <span class="font-weight-bold text-dark">Active Users</span>
+                        </h6>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="{% url 'inbox' %}">
                     <div class="d-flex py-1">
                       <div
