--- a/core/templates/core/uploadpost.html
+++ b/core/templates/core/uploadpost.html
@@ -70,9 +70,9 @@
 
             <!-- User Profile -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-white p-0" id="dropdownMenuButton" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm  me-3 ">
+              <a href="javascript:;" class="nav-link text-white p-0 position-relative" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="{{ request.user.profile.image.url }}" class="avatar avatar-sm me-3">
+                <span class="active-indicator"></span>
               </a>
     
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
