--- a/templates/base.html
+++ b/templates/base.html
@@ -113,6 +113,16 @@ label {
     margin-top: 25px; /* Adjust the margin as needed */
     margin-right: 14px; /* Adjust the margin as needed */
   }
+    .avatar-circle {
+        border: 2px solid #00ff00; /* Green border color */
+        border-radius: 50%; /* Makes the element circular */
+        padding: 2px; /* Adjust the padding as needed */
+    }
+
+    .avatar-lg {
+        width: 80px; /* Set the desired size for the image */
+        height: 80px; /* Set the desired size for the image */
+    }
 
 </style>
   </head>
