--- a/templates/base.html
+++ b/templates/base.html
@@ -136,7 +136,7 @@
         <i class="fa fa-atom"></i>
       </a>
       <a
-      href="javascript:;"
+      href="https://www.linkedin.com/in/colin-ado-0978332a7/"
       target="_blank"
       class="text-dark me-xl-4 me-4"
       >
