--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -84,6 +84,7 @@
             </li>
             <!-- Notification end -->
 
+            <ion-icon name="sunny-sharp"></ion-icon>
             <!-- User Profile -->
             <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-white p-0 position-relative" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
@@ -113,7 +114,7 @@
                     <div class="d-flex py-1">
                       <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                        <ion-icon name="person"></ion-icon>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
@@ -225,7 +226,7 @@
                     <div class="col-md-3 mb-4">
                         <div class="d-flex flex-column align-items-center p-1">
                             <a href="{% url 'profile' profile.user %}">
-                                <img src="{{ profile.image.url }}" alt="{{ profile.user }}" class="img-fluid rounded-circle" style="width: 80px; height: 80px;">
+                                <img src="{{ profile.image.url }}" alt="{{ profile.user }}" class="img-fluid rounded-circle" style="width: 85px; height: 75px;">
                             </a>
                             <strong>
                               {% with user_followers=profile.user.followers.all|length %}
