Updated back arrow icon

--- a/core/templates/core/password_change.html
+++ b/core/templates/core/password_change.html
@@ -9,7 +9,7 @@
   <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl navbar-fixed" id="navbarBlur" data-scroll="false">
     <div class="container-fluid py-1 px-3 navbar-content">
         <a class="navbar-brand" href="#" onclick="goBack()">
-            <i class="ni ni-bold-left"></i>
+             <ion-icon name="arrow-back-outline"></ion-icon>
         </a>
   
         <!-- User Profile and Notification (Far Right) -->
