--- a/core/templates/core/password_change_done.html
+++ b/core/templates/core/password_change_done.html
@@ -10,7 +10,7 @@
       <div class="container-fluid py-1 px-3">
         <div class="d-flex justify-content-between align-items-center w-100">
           <a class="navbar-brand" href="#" onclick="goBack()">
-            <i class="ni ni-bold-left"></i>
+             <ion-icon name="arrow-back-outline"></ion-icon>
           </a>
     
           <!-- User Profile and Notification (Far Right) -->
@@ -44,7 +44,7 @@
                     <div class="d-flex py-1">
                       <div
                         class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                        <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+                        <ion-icon name="person"></ion-icon>
                       </div>
                       <div class="d-flex flex-column justify-content-center">
                         <h6 class="text-sm font-weight-normal mb-1">
