--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -146,7 +146,7 @@
     <div class="container-fluid py-1 px-3">
       <div class="d-flex justify-content-between align-items-center w-100">
         <a class="navbar-brand" href="#" onclick="goBack()">
-          <i class="ni ni-bold-left"></i>
+           <ion-icon name="arrow-back-outline"></ion-icon>
         </a>
     
           <!-- User Profile and Notification (Far Right) -->
