Add clean  code to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -343,7 +343,7 @@
 <!-- for handling go backs -->
 <script>
 function goBack() {
-    history.go(-1);  // This navigates back one step in the history
+    history.go(-1);  
 }
 </script>
 <script>
